# lab2-fractalclockwork

./: DevelopmentBLAS.Dockerfile  DevelopmentBase.Dockerfile  buildDocker.sh  develop_container.sh  entrypoint.sh
example_library/: CMakeLists.txt
example_library/src/: linear_alg.cpp
example_library/test/: linear_alg_test.cpp
